--- a/src/app/links/links.component.html
+++ b/src/app/links/links.component.html
@@ -1,5 +1,7 @@
 <ul>
 	<li *ngFor="let links of links">
 		<a *ngIf="links.isShow" [href]="links.url" [target]="links.target" [title]="links.name">{{links.name}}</a>
+		<app-button-link *ngIf="!links.isShow"></app-button-link>
+		<! –– need to fix this mess? ––>
 	</li>
 </ul>
